[tool.poetry]
name = "my-python-app"
version = "0.1.0"
description = "A simple Python application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/yourusername/my-python-app"
documentation = "https://example.com/docs"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.0"
requests = "^2.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.18"
black = "^22.3"
flake8 = "^4.0"
isort = "^5.10"
release-drafter = "^5.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
